Project

General

Profile

Actions

Bug #46803

closed

MigrateRequest.cc: 129: FAILED ceph_assert(image_ctx.parent != nullptr)

Added by Jason Dillaman almost 4 years ago. Updated almost 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus,octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If two migration execute operations run concurrently, the first one to finish will set the state to "EXECUTED" and will result in the parent image being closed. The second process might fail on an assertion that the parent still exists.

 2020-07-28T11:54:18.920 INFO:tasks.workunit.client.0.smithi007.stdout:[ RUN      ] TestMigration.OtherPoolAbortAfterExecute
2020-07-28T11:54:18.966 INFO:tasks.workunit.client.0.smithi007.stdout:resize: 83886080
2020-07-28T11:54:18.984 INFO:tasks.workunit.client.0.smithi007.stdout:migration_prepare
2020-07-28T11:54:19.170 INFO:tasks.workunit.client.0.smithi007.stdout:migration_execute
2020-07-28T11:54:19.296 INFO:tasks.workunit.client.0.smithi007.stderr:/home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos8/DIST/centos8/MACHINE_SIZE/gigantic/release/16.0.0-3865-g7d2edf0f928/rpm/el8/BUILD/ceph-16.0.0-3865-g7d2edf0f928/src/librbd/operation/MigrateRequest.cc: In function 'void librbd::operation::{anonymous}::C_MigrateObject<I>::migrate_object() [with I = librbd::ImageCtx]' thread 7f0795ffb700 time 2020-07-28T11:54:19.295741+0000
2020-07-28T11:54:19.297 INFO:tasks.workunit.client.0.smithi007.stderr:/home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos8/DIST/centos8/MACHINE_SIZE/gigantic/release/16.0.0-3865-g7d2edf0f928/rpm/el8/BUILD/ceph-16.0.0-3865-g7d2edf0f928/src/librbd/operation/MigrateRequest.cc: 129: FAILED ceph_assert(image_ctx.parent != nullptr)
2020-07-28T11:54:19.298 INFO:tasks.workunit.client.0.smithi007.stderr: ceph version 16.0.0-3865-g7d2edf0f928 (7d2edf0f92888c30581140c9519c6f3c7ca8da65) pacific (dev)
2020-07-28T11:54:19.299 INFO:tasks.workunit.client.0.smithi007.stderr: 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x158) [0x7f07e08feee6]
2020-07-28T11:54:19.299 INFO:tasks.workunit.client.0.smithi007.stderr: 2: (()+0x276100) [0x7f07e08ff100]
2020-07-28T11:54:19.299 INFO:tasks.workunit.client.0.smithi007.stderr: 3: (()+0x7c0dee) [0x559a9f01bdee]
2020-07-28T11:54:19.299 INFO:tasks.workunit.client.0.smithi007.stderr: 4: (()+0x7c1098) [0x559a9f01c098]
2020-07-28T11:54:19.299 INFO:tasks.workunit.client.0.smithi007.stderr: 5: (librbd::AsyncObjectThrottle<librbd::ImageCtx>::start_next_op()+0xaf) [0x559a9f06c6ff]
2020-07-28T11:54:19.300 INFO:tasks.workunit.client.0.smithi007.stderr: 6: (librbd::AsyncObjectThrottle<librbd::ImageCtx>::finish_op(int)+0x92) [0x559a9f06c8f2]
2020-07-28T11:54:19.300 INFO:tasks.workunit.client.0.smithi007.stderr: 7: (()+0x7bff55) [0x559a9f01af55]
2020-07-28T11:54:19.300 INFO:tasks.workunit.client.0.smithi007.stderr: 8: (librbd::io::ObjectRequest<librbd::ImageCtx>::finish(int)+0x57) [0x559a9f0c6307]
2020-07-28T11:54:19.300 INFO:tasks.workunit.client.0.smithi007.stderr: 9: (librbd::io::AbstractObjectWriteRequest<librbd::ImageCtx>::post_write_object_map_update()+0x452) [0x559a9f0ca512]
2020-07-28T11:54:19.300 INFO:tasks.workunit.client.0.smithi007.stderr: 10: (librbd::io::AbstractObjectWriteRequest<librbd::ImageCtx>::handle_write_object(int)+0x75) [0x559a9f0cac55]
2020-07-28T11:54:19.301 INFO:tasks.workunit.client.0.smithi007.stderr: 11: (_ZN5boost4asio6detail11executor_opIN4ceph5async17ForwardingHandlerINS4_17CompletionHandlerIZN6librbd4asio4util20get_callback_adapterIZNS7_2io26AbstractObjectWriteRequestINS7_8ImageCtxEE12write_objectEvEUliE1_EEDaOT_EUlNS_6system10error_codeEDpOT_E_St5tupleIJSJ_EEEEEESaINS4_6detail14CompletionImplINS0_10io_context13executor_typeESN_vJSJ_EEEENS1_19scheduler_operationEE11do_completeEPvPSY_RKSJ_m()+0x5b) [0x559a9f0cb4cb]
2020-07-28T11:54:19.301 INFO:tasks.workunit.client.0.smithi007.stderr: 12: (()+0xbeb72) [0x7f07e9e7eb72]
2020-07-28T11:54:19.301 INFO:tasks.workunit.client.0.smithi007.stderr: 13: (()+0xc34ea) [0x7f07e9e834ea]
2020-07-28T11:54:19.301 INFO:tasks.workunit.client.0.smithi007.stderr: 14: (()+0xc2b23) [0x7f07dedadb23]
2020-07-28T11:54:19.301 INFO:tasks.workunit.client.0.smithi007.stderr: 15: (()+0x82de) [0x7f07e9ba82de]
2020-07-28T11:54:19.302 INFO:tasks.workunit.client.0.smithi007.stderr: 16: (clone()+0x43) [0x7f07de48a133]

Related issues 2 (0 open2 closed)

Copied to rbd - Backport #47427: octopus: MigrateRequest.cc: 129: FAILED ceph_assert(image_ctx.parent != nullptr)ResolvedMykola GolubActions
Copied to rbd - Backport #47428: nautilus: MigrateRequest.cc: 129: FAILED ceph_assert(image_ctx.parent != nullptr)RejectedMykola GolubActions
Actions #1

Updated by Mykola Golub over 3 years ago

  • Status changed from New to In Progress
  • Assignee set to Mykola Golub
Actions #2

Updated by Mykola Golub over 3 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 37012
Actions #3

Updated by Jason Dillaman over 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #47427: octopus: MigrateRequest.cc: 129: FAILED ceph_assert(image_ctx.parent != nullptr) added
Actions #5

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #47428: nautilus: MigrateRequest.cc: 129: FAILED ceph_assert(image_ctx.parent != nullptr) added
Actions #7

Updated by Ilya Dryomov over 2 years ago

Mykola, are you still planning to do the octopus backport?

Actions #8

Updated by Mykola Golub over 2 years ago

Ilya Dryomov wrote:

Mykola, are you still planning to do the octopus backport?

Ah, just forgot about it. Thanks for the remainder. I pushed a PR.

Actions #9

Updated by Ilya Dryomov almost 2 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF